# glodroid_forks

./: .clang-tidy  .gitignore  .gitlab-ci-checkcommit.sh  .gitlab-ci.yml  ANNOTATIONS  Android.bp  Android.mk  BUILD.bazel  C2FFMPEGAudioDecodeComponent.cpp  C2FFMPEGAudioDecodeComponent.h  C2FFMPEGVideoDecodeComponent.cpp  DrmHwcTwo.cpp  DrmHwcTwo.h  Kconfig  MAINTAINERS  Makefile  OWNERS  PREUPLOAD.cfg  README.md  TEST_MAPPING  Usb.cpp  Usb.h  UsbGadget.cpp  UsbGadget.h  accel-calibration.c  activity_event_entry.c  activity_event_utils.h  amdgpu.c  android.hardware.media.c2@1.2-service-ffmpeg.rc  android.hardware.usb@1.3-service.glodroid.rc  aospext_gen_targets.mk  aospext_get_buildflags.mk  build.config.common  build.config.constants  build.config.rpi4  build.config.rpi4.defconfig  build.config.rpi5  build.config.rpi5.defconfig  build_deploy.sh  common.h  (+48 more)
.ci/: .common.sh  .gitlab-ci-checkcommit.sh  .gitlab-ci-clang-build.sh  .gitlab-ci-clang-tidy-coarse.sh  .gitlab-ci-clang-tidy-fine.sh  Dockerfile  Makefile
android/: Android.mk  mesa3d_cross.mk  meson_cross.mk
apexd/: Android.bp  AndroidTest.xml  TEST_MAPPING  apex_constants.h  apex_database.cpp  apex_database.h  apex_database_test.cpp  apex_file.cpp  apex_file.h  apex_file_test.cpp  apex_file_test_config.xml  apex_key.cpp  apex_key.h  apex_manifest.cpp  apex_manifest.h  apex_manifest_test.cpp  apex_preinstalled_data.cpp  apex_preinstalled_data.h  apex_shim.cpp  apex_shim.h  apex_shim_test.cpp  apexd.cpp  apexd.h  apexd.rc  apexd_checkpoint.h  apexd_checkpoint_vold.cpp  apexd_checkpoint_vold.h  apexd_loop.cpp  apexd_loop.h  apexd_main.cpp  apexd_preinstall.cpp  apexd_preinstall.h  apexd_prepostinstall.cpp  apexd_prepostinstall.h  apexd_private.cpp  apexd_private.h  apexd_prop.cpp  apexd_prop.h  apexd_rollback_utils.h  apexd_session.cpp  (+14 more)
apexer/: Android.bp  apex_manifest.py  apexer.py  apexer_test.py  conv_apex_manifest.py  runtests.sh
backend/: Backend.cpp  Backend.h  BackendClient.cpp  BackendClient.h  BackendManager.cpp  BackendManager.h  BackendRCarDu.cpp  BackendRCarDu.h  BackendSunxi.cpp  BackendSunxi.h
block/: bio.c  blk-crypto-fallback.c  blk-crypto.c  keyslot-manager.c
boot/: bootm.c  image-android-dt.c  image-android.c  image-board.c  image-fdt.c
bufferinfo/: BufferInfo.h  BufferInfoGetter.cpp  BufferInfoGetter.h  BufferInfoMapperMetadata.cpp  BufferInfoMapperMetadata.h  BufferInfoYagi.cpp  BufferInfoYagi.h
buildcmds/: Android.mk
cmd/: abootimg.c  adtimg.c  avb.c
common/: Makefile  image-android-dt.c  image-fdt.c
compositor/: DrmDisplayComposition.cpp  DrmDisplayComposition.h  DrmDisplayCompositor.cpp  DrmDisplayCompositor.h  DrmKmsPlan.cpp  DrmKmsPlan.h  LayerData.h  Planner.cpp  Planner.h
configmgr/: audio_config.c
configs/: orangepi_3_defconfig  pinephone-pro-rk3399_defconfig  pinephone_defconfig
core/: rtw_debug.c  rtw_ieee80211.c  rtw_mlme_ext.c  rtw_sta_mgt.c
cros_gralloc/: cros_gralloc_buffer.cc  cros_gralloc_buffer.h  cros_gralloc_driver.cc  cros_gralloc_driver.h  cros_gralloc_helpers.cc  meson.build
cros_gralloc/aidl/: Allocator.h
cros_gralloc/gralloc0/: gralloc0.cc  meson.build
cros_gralloc/gralloc4/: CrosGralloc4Allocator.h  CrosGralloc4Mapper.cc  CrosGralloc4Mapper.h  CrosGralloc4Utils.cc  CrosGralloc4Utils.h  meson.build
cros_gralloc/mapper_stablec/: Mapper.cpp
cros_gralloc/sepolicy/: cameraserver.te  mediaswcodec.te  system_server.te
disk/: Kconfig  part_efi.c
dmabuf_driver/: Android.bp  android.hardware.graphics.allocator@4.0-service.minigbm_dmabuf.rc  dma-heap.h  dmabuf_external_driver.cpp  dmabuf_internals.cpp  dmabuf_internals.h
docs/: README.md  features.txt
drm/: DrmAtomicStateManager.cpp  DrmAtomicStateManager.h  DrmConnector.cpp  DrmConnector.h  DrmCrtc.cpp  DrmCrtc.h  DrmDevice.cpp  DrmDevice.h  DrmDisplayPipeline.cpp  DrmDisplayPipeline.h  DrmEncoder.cpp  DrmEncoder.h  DrmEventListener.cpp  DrmEventListener.h  DrmFbImporter.cpp  DrmFbImporter.h  DrmGenericImporter.cpp  DrmGenericImporter.h  DrmMode.cpp  DrmMode.h  DrmPlane.cpp  DrmPlane.h  DrmProperty.cpp  DrmProperty.h  DrmUnique.h  ResourceManager.cpp  ResourceManager.h  UEventListener.cpp  UEventListener.h  VSyncWorker.cpp  VSyncWorker.h
ffmpeg_utils/: ffmpeg_utils.cpp  ffmpeg_utils.h  meson.build
fs/: Kconfig  eventpoll.c  libfs.c  namei.c  xattr.c
gbm_mesa_driver/: Android.bp  Android.mk  UniqueFd.h  android.hardware.graphics.allocator@4.0-service.minigbm_gbm_mesa.rc  gbm_mesa_driver.cpp  gbm_mesa_internals.cpp  gbm_mesa_internals.h  gbm_mesa_wrapper.c  gbm_mesa_wrapper.cpp  gbm_mesa_wrapper.h  meson.build
hwc2_device/: DrmHwcTwo.cpp  DrmHwcTwo.h  HwcDisplay.cpp  HwcDisplay.h  HwcDisplayConfigs.cpp  HwcDisplayConfigs.h  HwcLayer.cpp  HwcLayer.h  hwc2_device.cpp
include/: __bsd_locale_fallbacks.h  __config  __hash_table  __locale  algorithm  android_image.h  chrono  cmath  cwchar  drmhwcgralloc.h  drmhwcomposer.h  drv_types.h  fastboot.h  ieee80211.h  image-android-dt.h  image.h  locale  math.h  osdep_service_linux.h  random  regex  rtw_recv.h  rtw_version.h  string
init/: Kconfig  main.c
kernel/: fork.c  futex.c  kthread.c  module.c  sysctl.c
libavcodec/: Makefile  h264_slice.c  h264dec.c  h264dec.h  hevc-ctrls.h  hevcdec.c  hwaccels.h  mpeg12dec.c  v4l2_request.c  v4l2_request_h264.c  v4l2_request_hevc.c  v4l2_request_mpeg2.c  v4l2_request_vp8.c  v4l2_request_vp9.c  vp8.c  vp9.c  vp9dec.h
libavutil/: buffer.c  buffer.h  hwcontext_drm.c
mm/: cma.c  khugepaged.c  memory.c  mempolicy.c  page_alloc.c  vmscan.c  vmstat.c
net/: socket.c
os_dep/: osdep_service.c
platform/: platform.cpp
proto/: Android.bp  apex_build_info.proto  apex_manifest.proto  manifest_schema.proto  session_state.proto
scripts/: Makefile.lib
security/: security.c
shim/: Android.bp  README.md  com.android.apex.cts.shim.pem  com.android.apex.cts.shim.pubkey  com.android.apex.cts.shim.v1.apex  com.android.apex.cts.shim.v2.apex  (+15 more)
src/: ios.cpp  locale.cpp  (+1 more)
src/util/android/: buffer_info.c  buffer_info.h  buffer_info_fallback.c  buffer_info_gralloc0_cros_api.c  buffer_info_gralloc4_api.cpp  meson.build
(+882 files in other folders)
